; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_get_file_label.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_get_file_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64* (i64*)* @get_file_label to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64* @get_file_label(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64*, align 8
  store i64* %0, i64** %2, align 8
  %6 = load i64*, i64** %2, align 8
  %7 = call i64* @g_path_get_basename(i64* %6)
  store i64* %7, i64** %3, align 8
  %8 = load i64*, i64** %3, align 8
  %9 = call i64* @strrchr(i64* %8, i8 signext 46)
  store i64* %9, i64** %4, align 8
  %10 = load i64*, i64** %4, align 8
  %11 = icmp ne i64* %10, null
  br i1 %11, label %12, label %29

12:                                               ; preds = %1
  %13 = load i64*, i64** %3, align 8
  %14 = load i64*, i64** %3, align 8
  %15 = call i32 @strlen(i64* %14)
  %16 = sub nsw i32 %15, 1
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i64, i64* %13, i64 %17
  store i64* %18, i64** %5, align 8
  %19 = load i64*, i64** %5, align 8
  %20 = load i64*, i64** %4, align 8
  %21 = ptrtoint i64* %19 to i64
  %22 = ptrtoint i64* %20 to i64
  %23 = sub i64 %21, %22
  %24 = sdiv exact i64 %23, 8
  %25 = icmp sle i64 %24, 4
  br i1 %25, label %26, label %28

26:                                               ; preds = %12
  %27 = load i64*, i64** %4, align 8
  store i64 0, i64* %27, align 8
  br label %28

28:                                               ; preds = %26, %12
  br label %29

29:                                               ; preds = %28, %1
  %30 = load i64*, i64** %3, align 8
  ret i64* %30
}

declare dso_local i64* @g_path_get_basename(i64*) #1

declare dso_local i64* @strrchr(i64*, i8 signext) #1

declare dso_local i32 @strlen(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
